# OmniGWAS

./: LICENSE  README.md
analysis/01_basic_gwas/: README.md  basic_gwas.R
analysis/02_multiomics_gwas/: README.md  multiomics_gwas.R
analysis/03_singlecell_gwas/: README.md  singlecell_gwas.R
analysis/04_comorbidity_gwas/: README.md  comorbidity_gwas.R
analysis/05_auxiliary_tools/: README.md  auxiliary_tools.R
analysis/05_auxiliary_tools/batch_gsmap/: README.md
analysis/05_auxiliary_tools/batch_gsmap/R/: batch_gsmap.R
analysis/05_auxiliary_tools/batch_gsmap/src/: __init__.py  wrapper.py
analysis/05_auxiliary_tools/batch_smr_dynamic/: README.md
analysis/05_auxiliary_tools/batch_smr_dynamic/R/: batch_smr_dynamic.R
analysis/05_auxiliary_tools/batch_smr_dynamic/example/: config.yaml
analysis/05_auxiliary_tools/batch_smr_dynamic/src/: wrapper.py
analysis/05_auxiliary_tools/convert_supergnova/: README.md
analysis/05_auxiliary_tools/convert_supergnova/src/: __init__.py  converter.py
analysis/05_auxiliary_tools/manhattan_plot/: README.md
analysis/05_auxiliary_tools/manhattan_plot/src/: __init__.py
analysis/05_auxiliary_tools/utils/: README.md
batch_gsmap/example/: config.yaml
batch_smr_dynamic/: README.md
batch_smr_dynamic/R/: batch_smr_dynamic.R
batch_smr_dynamic/src/: __init__.py
convert_supergnova/: pyproject.toml
convert_supergnova/example/: example_data.txt
convert_supergnova/src/: cli.py
manhattan_plot/src/: wrapper.py
utils/R/: clean_compress.R  convert_pos.R  export_excel.R  rename_columns.R  utils.R
utils/src/: wrapper.py
(+8 files in other folders)
